--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-CHANGELOG - Record of Changes for NPtweedie
+CHANGELOG - Record of Changes for TDboost
 Please find below the list of the various changes and improvements that were part of each successive update.
 
 1.2:
