1. fix thanks note

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,3 +6,9 @@ Please find below the list of the various changes and improvements that were par
 
 1.0:
 * The initial release.
+
+=======================================================================
+
+Thanks to
+
+Leo Guelman for many suggestions and comments.
