--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 CHANGELOG - Record of Changes for TDboost
 Please find below the list of the various changes and improvements that were part of each successive update.
 
+1.2:
+* [added] Now the prediction function "predict.TDboost" can return either the predicted response, mu(x) = E(Y|X=x) (when type = "response"), or the predicted link xb = log(mu(x)) (when type = "link").
+
 1.1:
 * [added] Now gamma distribution (alpha=2) is supported.
 
